# cmake_shared_library

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  myexample.cpp
include/: myfunctions.h
src/: CMakeLists.txt  myfunctions.cpp
